# tcpClient2ClientBridge

./: .gitignore  ComunicationService.sln  TODO.txt
ComunicationService/: .gitignore  BinaryProtocolDecorator.cpp  BinaryProtocolDecorator.hpp  CMakeLists.txt  ComunicationService.cpp  ComunicationService.hpp  ComunicationService.vcxproj  ComunicationService.vcxproj.filters  Configuration.cpp  Configuration.hpp  DEBUG 21 May.txt  ERROR 21 May.txt  INFO 21 May.txt  Main.cpp  MainProjectLoger.hpp  TRACE 21 May.txt  UNIQ 21 May.txt  WARNING 21 May.txt  cmake_install.cmake  config.json  configuration.json  picosha2.h  stdafx.cpp
ComunicationService/Logger/: FileLoger.cpp  FileLoger.hpp  ILogerWriter.h  Loger.cpp  Loger.hpp  StatusInterface.hpp
ComunicationService/clients/: Base64ProtocolDecorator.cpp  Base64ProtocolDecorator.hpp  BaseClient.cpp  BaseClient.hpp  BaseProtocolDecorator.cpp  BaseProtocolDecorator.hpp  BinaryProtocolDecorator.cpp  BinaryProtocolDecorator.hpp  IBaseClient.hpp  ModemClient.cpp  ModemClient.hpp  NewProtocolDecorator.cpp  NewProtocolDecorator.hpp  OldProtocolDecorator.cpp  OldProtocolDecorator.hpp  ProtocolDecorator.cpp  ProtocolDecorator.hpp  ProtocolUtils.cpp  ProtocolUtils.hpp  SerialClient.cpp  SerialClient.hpp  TcpClient.cpp  TcpClient.hpp  messagesDTO.hpp
